// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API Surface Logging Function Levels Testing log level: alert 1`] = `
Object {
  "context": Object {
    "runtime": Object {
      "application": "testLogality",
      "file": "/test/spec/surface.test.js",
    },
    "source": Object {
      "file_name": "/test/spec/surface.test.js",
    },
    "system": Object {
      "hostname": "127.0.0.1",
      "pid": 36255,
      "process_name": "/Users/thanpolas/.nvm/versions/node/v10.1.0/bin/node",
    },
  },
  "dt": "2018-05-18T16:25:57.815Z",
  "event": Object {},
  "level": "alert",
  "message": "hello world",
}
`;

exports[`API Surface Logging Function Levels Testing log level: critical 1`] = `
Object {
  "context": Object {
    "runtime": Object {
      "application": "testLogality",
      "file": "/test/spec/surface.test.js",
    },
    "source": Object {
      "file_name": "/test/spec/surface.test.js",
    },
    "system": Object {
      "hostname": "127.0.0.1",
      "pid": 36255,
      "process_name": "/Users/thanpolas/.nvm/versions/node/v10.1.0/bin/node",
    },
  },
  "dt": "2018-05-18T16:25:57.815Z",
  "event": Object {},
  "level": "critical",
  "message": "hello world",
}
`;

exports[`API Surface Logging Function Levels Testing log level: debug 1`] = `
Object {
  "context": Object {
    "runtime": Object {
      "application": "testLogality",
      "file": "/test/spec/surface.test.js",
    },
    "source": Object {
      "file_name": "/test/spec/surface.test.js",
    },
    "system": Object {
      "hostname": "127.0.0.1",
      "pid": 36255,
      "process_name": "/Users/thanpolas/.nvm/versions/node/v10.1.0/bin/node",
    },
  },
  "dt": "2018-05-18T16:25:57.815Z",
  "event": Object {},
  "level": "debug",
  "message": "hello world",
}
`;

exports[`API Surface Logging Function Levels Testing log level: emergency 1`] = `
Object {
  "context": Object {
    "runtime": Object {
      "application": "testLogality",
      "file": "/test/spec/surface.test.js",
    },
    "source": Object {
      "file_name": "/test/spec/surface.test.js",
    },
    "system": Object {
      "hostname": "127.0.0.1",
      "pid": 36255,
      "process_name": "/Users/thanpolas/.nvm/versions/node/v10.1.0/bin/node",
    },
  },
  "dt": "2018-05-18T16:25:57.815Z",
  "event": Object {},
  "level": "emergency",
  "message": "hello world",
}
`;

exports[`API Surface Logging Function Levels Testing log level: error 1`] = `
Object {
  "context": Object {
    "runtime": Object {
      "application": "testLogality",
      "file": "/test/spec/surface.test.js",
    },
    "source": Object {
      "file_name": "/test/spec/surface.test.js",
    },
    "system": Object {
      "hostname": "127.0.0.1",
      "pid": 36255,
      "process_name": "/Users/thanpolas/.nvm/versions/node/v10.1.0/bin/node",
    },
  },
  "dt": "2018-05-18T16:25:57.815Z",
  "event": Object {},
  "level": "error",
  "message": "hello world",
}
`;

exports[`API Surface Logging Function Levels Testing log level: info 1`] = `
Object {
  "context": Object {
    "runtime": Object {
      "application": "testLogality",
      "file": "/test/spec/surface.test.js",
    },
    "source": Object {
      "file_name": "/test/spec/surface.test.js",
    },
    "system": Object {
      "hostname": "127.0.0.1",
      "pid": 36255,
      "process_name": "/Users/thanpolas/.nvm/versions/node/v10.1.0/bin/node",
    },
  },
  "dt": "2018-05-18T16:25:57.815Z",
  "event": Object {},
  "level": "info",
  "message": "hello world",
}
`;

exports[`API Surface Logging Function Levels Testing log level: notice 1`] = `
Object {
  "context": Object {
    "runtime": Object {
      "application": "testLogality",
      "file": "/test/spec/surface.test.js",
    },
    "source": Object {
      "file_name": "/test/spec/surface.test.js",
    },
    "system": Object {
      "hostname": "127.0.0.1",
      "pid": 36255,
      "process_name": "/Users/thanpolas/.nvm/versions/node/v10.1.0/bin/node",
    },
  },
  "dt": "2018-05-18T16:25:57.815Z",
  "event": Object {},
  "level": "notice",
  "message": "hello world",
}
`;

exports[`API Surface Logging Function Levels Testing log level: warn 1`] = `
Object {
  "context": Object {
    "runtime": Object {
      "application": "testLogality",
      "file": "/test/spec/surface.test.js",
    },
    "source": Object {
      "file_name": "/test/spec/surface.test.js",
    },
    "system": Object {
      "hostname": "127.0.0.1",
      "pid": 36255,
      "process_name": "/Users/thanpolas/.nvm/versions/node/v10.1.0/bin/node",
    },
  },
  "dt": "2018-05-18T16:25:57.815Z",
  "event": Object {},
  "level": "warn",
  "message": "hello world",
}
`;
